--- a/main.tex
+++ b/main.tex
@@ -286,7 +286,7 @@ $$\GaussSumCharacter{\alpha}{\chi}{\fieldCharacter_n} = -q^{-\frac{n}{2}}\sum_{x
 
 We are now ready to state Kondo's result.
 %test
-\begin{theorem}[Kondo {\cite{Kondo1963}}]
+\begin{theorem}[Kondo {\cite{Kondo1963}}]\label{thm:KondoClassical}
 	Suppose that $\tau$ is an irreducible representation of $\GL_n\left(\finiteField\right)$ with cuspidal support $\left\{\tau_1,\dots, \tau_r\right\}$, where $n_1 + \dots + n_r = n$, and where for every $j$, $\tau_j$ is an irreducible cuspidal representation of $\GL_{n_j}\left(\finiteField\right)$ corresponding to the Frobenius orbit of a regular character $\theta_j \colon \multiplicativegroup{\finiteFieldExtension{n_j}} \to \multiplicativegroup{\cComplex}$. Then
 	$$\GaussSumScalar{\tau \times \chi}{\fieldCharacter} = \left(-1\right)^n \cdot \prod_{j=1}^r \GaussSumCharacter{\theta_j}{\chi}{\fieldCharacter_{n_j}}.$$
 \end{theorem}
@@ -1014,7 +1014,7 @@ Here is a basic example of a stable class function.
     If $f \colon \algebraicGroup{G}^{\Frobenius} \to \cComplex$ is supported on the center $\algebraicGroup{Z}^{\Frobenius}$ of $\algebraicGroup{G}^{\Frobenius}$, then $f$ is a stable function.
 \end{proposition}
 \begin{proof}
-By \cite[Lemma 2.2]{Malle2007}, if $\pi$ and $\pi'$ lie in the same geometric Lusztig series, then they have the same central character. The result now immediately follows.
+By \cite[Lemma 2.2]{Malle2007}, if $\pi$ and $\pi'$ lie in the same geometric Lusztig series, then they have the same central character. The result now immediately follows.\calvin{central character means (center of $G$)($\mathbb{F}$) not center of ($G(\mathbb{F})$)?}
 \end{proof}
 %adding in the commented out sketched proof just in case:
 \begin{comment}
@@ -1032,8 +1032,7 @@ The main result of this paper is
 \label{thm:Phi_stable}
 	The assignments $H \to \cComplex$ given by $$h \mapsto \genHermitianJacobiKernel{\hermitianSpace}{h}$$ are stable functions. Equivalently, the assignments $$\pi \mapsto \dblJacobiSumScalar{\pi}{\chi}$$ are constant on geometric Lusztig series.
 \end{theorem}
-In the $\GL_n$ case this follows from \Cref{thm:gln-doubling-gauss-sum-in-terms-of-kondo} along with \calvin{Hasse-Davenport? Something else?}.
-In this section we prove a slightly weaker result:
+%In the $\GL_n$ case, \Cref{thm:gln-doubling-gauss-sum-in-terms-of-kondo} 
 
 \begin{lemma}
 \label{lem:indep_geo_conj}
@@ -1074,9 +1073,9 @@ The following lemma shows that this is well defined.
 \begin{enumerate}[(i)]
 	\item In this case when $T = \prod_{i} \multiplicativegroup{\finiteFieldExtension{n_i}}$ and $\theta = \prod_{i} \alpha_i$, we recover the Gauss sum
 	\[
-	g_{T,\rho}(\chi,\theta,\psi)  = \prod_i \tau(\alpha_i \times \chi, \fieldCharacter_{n_i}),
+	g_{T,\rho}(\chi,\theta,\psi)  = \prod_i \tau(\alpha_i \times \chi, \fieldCharacter_{n_i}) = (-1)^nq^{-n/2}G(\tau \times \chi,\psi)
 	\]
-	which by the Hasse-Davenport relation depends only on the geometric conjugacy class of $(T,\theta)$ hence the semisimple conjugacy class of $(s_{T,\theta})$ \calvin{maybe write more or less?}. 
+	where $\tau$ is any subrepresentation of $R_{T,\theta}$. By \Cref{thm:KondoClassical}, this only depends on geometric conjugacy class of $(T,\theta)$ hence the semisimple conjugacy class of $(s_{T,\theta})$.
 	\item For a Frobenius stable semisimple conjugacy class $(s)$ in $\GL_n$, we define
 	\[
 	g_{(s)}(\psi,\chi) := g_{T,\rho}(\chi,\theta,\psi) \textnormal{ for some } (T,\theta) \textnormal{ such that } (s_{T,\theta}) = (s)
@@ -1103,28 +1102,33 @@ Both are equal to $g_{(\rho(s_{T,\theta}))}(\psi,\chi) = g_{(\rho(s_{T',\theta'}
 \end{remark}
 
 The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} relates $\dblVirtualJacobiSumScalar{R_{T, \theta}}{\chi}/R_{T,\theta}(1)$ to $g_{T,\rho}(\chi,\theta,\psi)$ for the appropriate $\rho$ in the table below. 
+
 \begin{center}
-\begin{tabular}{ c c}
- Group & Dual group representations $\rho$ \\ 
- $Sp(2n)$ &$SO(2n+1) \to \GL(2n+1)$\\  
- $GSp(2n)$  &$GSpin(2n+1) \to \GL(2n+1)$ \\
- $SO(2n)$ &$SO(2n) \to \GL(2n)$ \\
- $GO(2n)$ & ? \\
- $SO(2n+1)$ &$Sp(2n) \to \GL(2n)$ \\
- $GO(2n+1)$ & ? \\ 
-  $U(n)$  & $U(n) \to \restrictionOfScalars{\quadraticExtension}{\finiteField}{\algebraicGroup{\GL}_n}$  
-\end{tabular}
+	\begin{tabular}{|c|c|} \hline
+		$\algebraicGroup{G}$ & $\algebraicGroup{G}^*$ representation  \tabularnewline \hline \hline
+		$\algebraicGroup{GL}_n$ &  $\algebraicGroup{\GL}_n \to \algebraicGroup{GL}_{2n}$ \tabularnewline \hline
+		$\algebraicGroup{\UnitaryGroup}_{n}$ &  $\algebraicGroup{\UnitaryGroup}_{n} \to \restrictionOfScalars{\quadraticExtension}{\finiteField}{\algebraicGroup{GL}_n}$\tabularnewline \hline		 				 
+		$\algebraicGroup{\SO}_{2n+1}$ &$\algebraicGroup{\Sp}_{2n} \to \algebraicGroup{\GL}_{2n}$ \tabularnewline \hline
+		$\algebraicGroup{\Sp}_{2n}$  &$\algebraicGroup{\SO}_{2n+1}\to \algebraicGroup{\GL}_{2n+1}$\tabularnewline \hline		 
+		$\algebraicGroup{\SO}^{+}_{2n}$ &$\algebraicGroup{\SO}^{+}_{2n}\to \algebraicGroup{\GL}_{2n}$\tabularnewline \hline
+		$\algebraicGroup{\SO}^{-}_{2n}$ &$\algebraicGroup{\SO}^{-}_{2n}\to \algebraicGroup{\GL}_{2n}$\tabularnewline \hline
+		$\algebraicGroup{\GSp}_{2n}$  &$\algebraicGroup{GSpin}_{2n+1}\to \algebraicGroup{\GL}_{2n+1}$ \tabularnewline \hline
+		$\algebraicGroup{\GSO}^{+}_{2n}$ & $\algebraicGroup{GSpin}_{2n}^{+}\to\algebraicGroup{\GL}_{2n}$ \tabularnewline \hline
+		$\algebraicGroup{\GSO}^{-}_{2n}$& $\algebraicGroup{GSpin}_{2n}^{-}\to\algebraicGroup{\GL}_{2n}$\tabularnewline \hline
+	\end{tabular}
 \end{center}
+Where in each case the map on cocharacters $\rho_*:X_*(\algebraicGroup{T}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^n \to X_*(\tilde{\algebraicGroup{T}}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^{2n}$ send $x$ to $(x,-w_n x)$ \calvin{in the GSpin cases might scale up by 2}
 %Note that in the $SO$ and $GSO$ case, the map $\rho$ sends the split torus of $G^*$ into the split torus of $\GL(2n)$ and the induced map of cocharacters sends $x \mapsto (x,-x)$. In the $Sp,GSp$ cases the map is similar: the induced map of cocharacters sends $x \mapsto (x,1,-x)$. In the unitary case, the torus whose $\finiteField$ points are $(\NormOneGroup{2})^n \subset G^*(\finiteField)$ includes into the torus in $\GL(2n)$ whose $\finiteField$ points are $(\finiteFieldExtension{2}^\times)^n$ and the induced map of cocharacters is $(x_1,x_2, \hdots, x_n) \mapsto (x_1,-x_1,x_2,-x_2, \hdots ,x_n,-x_n)$. 
 
 
 %In particular 
 %To analyze $g_{\algebraicGroup{T},\rho}(\chi,\theta,\psi)$ for these $\rho$, we need to understand what torus character pair of $\GL$ corresponds to $\phi((s))$ under a map $\phi(x) = (x,-x)$:
 %The following computation in the proof of theorem \ref{lem:indep_geo_conj}.
+Our proof of \Cref{lem:cochar_computation} will check that $\rho(s_{T,\theta}) = (s_{\Tilde{T},\Tilde{\theta}})$ with $g_{T}(\chi,\theta,\psi)$ equal to $\tau_{\Tilde{T}}(\Tilde{\theta} \times \chi,\psi)$ up to a few factors. We will do this by breaking our tori into irreducible rational factors with the following lemma handling each possible factor
 
 \begin{lemma}
 \label{lem:cochar_computation}
-    Let $\phi:X_*(\algebraicGroup{T}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^n \to X_*(\tilde{\algebraicGroup{T}}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^{2n}$ send $x$ to $(x,-w_n x)$. Then we have the following cases corresponding to conjugacy classes in the Weyl group
+    Let $\phi:X_*(\algebraicGroup{T}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^n \to X_*(\tilde{\algebraicGroup{T}}^*) \cong (\mathbb{Q}/\mathbb{Z})_{p'}^{2n}$ send $x$ to $(x,-w_n x)$ be a $\Frobenius$ equivariant map. Then:
     \begin{enumerate}
         \item[B,C,D Case 1)] $w$ is conjugate to an $n$-cycle: \calvin{Add in note about the two type B cases. Maybe really should just talk about $\Frobenius$ action} In this case $\algebraicGroup{T} = \mathrm{Res}_{\mathbb{F}_n:\mathbb{F}}\algebraicGroup{G}_m$ with $\Frobenius$ acting by $w$ on the preimage and the cycle $(w,w^\ast)$ on the image, and $$x_{\finiteFieldExtension{n}^\times \times \finiteFieldExtension{n}^\times,\alpha \times \alpha^{-1}} = \phi(x_{\finiteFieldExtension{n},\alpha}).$$
         \item[B,C,D Case 2)] $w$ is conjugate to an $n$-cycle with one negative:
@@ -1133,6 +1137,17 @@ The idea behind the proof of \Cref{lem:indep_geo_conj} is that the formula from 
         w w_n & 0
         \end{pmatrix}$  on the image, and 
 		$$x_{\finiteFieldExtension{n}^\times \times \finiteFieldExtension{n}^\times,\alpha \times \alpha^{-q}} = \phi(x_{\finiteFieldExtension{n},\alpha}).$$
+		where explitely $\finiteFieldExtension{n}^\times \times \finiteFieldExtension{n}^\times,\alpha \times \alpha^{-q}$ refers to the torus
+		\[
+\left(\begin{pmatrix}
+x_0 & 0\\
+0 & y_0
+\end{pmatrix},\begin{pmatrix}
+	F(x_0) & 0\\
+	0 & F(y_0)
+	\end{pmatrix} \right) \in \restrictionOfScalars{\quadraticExtension}{\finiteField}{GL}_n
+		\]
+		with character $\alpha(x_0)\alpha^{-q}(y_0)$.
     \item[$G=\algebraicGroup{U}$ Case 2)] $w$ is conjugate to $(1,2 \hdots n)$ an odd cycle: In this case $\algebraicGroup{T} = \mathrm{Res}_{\mathbb{F}_n:\mathbb{F}}\algebraicGroup{U}(1)$ with $\Frobenius$ acting by $-1\cdot w$ on the preimage and by the $2n$ cycle $\begin{pmatrix} 0 & w_nw \\
         w w_n& 0
         \end{pmatrix}$ on the image, and $$x_{\finiteField_{2n}^\times,\theta'}=\phi(x_{\NormOneGroup{2n},\theta})$$ where $\theta'(t) = \theta(t^{1-q^n})$
@@ -1185,9 +1200,6 @@ Thus the result follows from the computations:
 \end{comment}
 \end{proof}
 
-\begin{remark}\calvin{figure out how to type out better}
-There is some ambiguity in choice of generator of each toris: for instance I could $\alpha \times \alpha^{-1}$ with $\alpha \times \alpha^{-q}$ in the first equality using the coordinate $y_{2n-1}$ instead of $y_{2n}$ for the second coordinate. In the type B,C,D case this ambiguity does not effect our sums since $\chi,\psi$ are defined over $\finiteField$ and hence stable under Frobenius i.e. $q$-th powers. In the type A unitary case, it is important to know which generators are in the first component which is any $y_i$ with $i\leq n$ since our characters $\chi$ take as input these entries.
-\end{remark}
 
 We let $\phi_{B,\lambda_i^+}, \phi_{B,\lambda_i^-}$ denote the $\phi$'s above in cases 1 and 2 respectivitly with $n = |\lambda_i|$. 
 Let $\phi_{U,\lambda_i}$ denote the $\phi$'s above in cases 3 and 4 with $n = |\lambda_i|$.
@@ -1205,7 +1217,7 @@ g_{T,\rho}(\chi,\theta,\fieldCharacter)= g_{T}(\chi^{-1},\theta^{-1},\fieldChara
 \]
 \calvin{$\chi$ or $\chi^{-1}$? Check throughout proof!}
 We will do this casewise, demonstrating in each case that the Frobeinus equivariant map $X_*(\algebraicGroup{T}) \to X_*(\algebraicGroup{G})$ decomposes into a direct sum of $\phi$'s appearing in \Cref{lem:cochar_computation}. Useful here is the description of the rational maximal tori $\algebraicGroup{T} \subseteq \algebraicGroup{G}$ and geometric Frobeinus action on $X_*(\algebraicGroup{T})$. 
-
+\calvin{add in GL case}
 \begin{enumerate}
     \item[($\algebraicGroup{U}$)] Given $(T,\theta)$, let $T$ correspond to the $w_n$-twisted conjugacy class $[w]$. Let $w \circ w_n$ have cycle decomposition $\lambda$ 
 	and $\theta$ decompose as a product over $\lambda_i$ of $\alpha_i$ if $\lambda_i$ is even and $\theta_i$ if $\lambda_i$ is odd. Then
